tests/test_files/type_checker/bad_identifier.stderr
error: unknown identifier `msg1`
- type_checker/bad_identifier:2:4
2 |     msg1
  |     ^^^^
